
- File selection dialog for Perl fixed. The filter shows now correctly 
  Perl scripts and modules. (TheHighFish)

- Passing pointer to the callback function now everytime to Perl, 
  when a new file gets loaded, instead of only once when the
  interface is initilaized. (TheHighFish)
  
- Assertion failure in CFontDialog (jumpingfences)
  
v1.7.0 2008-03-15
NEW STUFF:
- All Poker Tracker-compatible sites are now supported by OH for pulling Poker Tracker data.
  The table map must have s$network or s$sitename set to a supported name (see s$network below
  for a complete list). (quiqsilver)

- New symbol s$network is now available.  This is used to determine the appropriate
  network to pull Poker Tracker data for when s$sitename is not a PT supported site.  OH will
  first check s$sitename for a supported network name, then s$network.  These are the supported
  names for both s$sitename and s$network and must be lowercase: stars, party, ultimate, absolute,
  microgaming, ongame, cryptologic, pacific, fulltilt, b2b, tribeca, worldpex, ipoker, tain,
  bodog, everest, boss, and betfair. (quiqsilver)

- OpenHoldem will now use Poker Tracker data when connected to ManualMode if s$network or
  s$sitename in ManualMode's table map is set to a Poker Tracker compatible name. (quiqsilver)
  
- Integration of the ActiveState Perl interpreter. (TheHighFish)

- Automatic poker chat for formula and DLL level. (TheHighFish) 

- Warnings have been added when you click the Connect button for common configuration issues.
  Font Smoothing, 24+ Bit color, and a check for Title size to catch XP Themes and Font Size settings (Spew)

- Added a check for a card string of "10" instead of "T", to be converted to a "T", in both common and
  player card rank fuzzy scrapes (e.g., "if (rankstr=="10") rankstr="T";"). - BillW

BUG FIXES:
- OpenHoldem no longer performs unnecessary Poker Tracker database queries when we are not using
  a compatible site. (quiqsilver)
